# fingerprint_for_wilton

./: CMakeLists.txt  README.md  index.js
src/: bitmap_to_png.cpp  bitmap_to_png.h  ftrScan.cpp  ftrScan.hpp  main.cpp
